--- a/client/src/infrastructure/view/components/atoms/option/option.scss
+++ b/client/src/infrastructure/view/components/atoms/option/option.scss
@@ -1,10 +1,15 @@
 @import "../../../../../styles/vars/index.scss";
 
 .option {
-        border-radius: 10px;
-        cursor: pointer;
-        &:hover {
-          color: white;
-          background-color: $nightblue;
-        }
+  font-size: 20px;
+  width: 150px;
+  height: auto;
+  background-color: #fff;
+  text-align: center;
+  border-radius: 10px;
+  cursor: pointer;
+  &:hover {
+    color: white;
+    background-color: $nightblue;
+  }
 }
