--- a/client/src/styles/molecules/_card.scss
+++ b/client/src/styles/molecules/_card.scss
@@ -50,23 +50,23 @@
   &__illustration {
     width: inherit;
   }
-  &__status {
-    padding-top: 2rem ;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    font-size: 1rem;
-    width: 50%;
-    &__logo{
-      width: 1.5rem;
-    }
-    &__disponible{
-        padding-left: 2rem;
-        display: flex;
-        gap: 1rem
-    }
-  }
+  // &__status {
+  //   padding-top: 2rem ;
+  //   font-weight: bold;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: space-evenly;
+  //   font-size: 1rem;
+  //   width: 50%;
+  //   &__logo{
+  //     width: 1.5rem;
+  //   }
+  //   &__disponible{
+  //       padding-left: 2rem;
+  //       display: flex;
+  //       gap: 1rem
+  //   }
+  // }
   &__statusDisponible {
       padding-left: 2rem;
       font-size: 1rem;
