--- a/client/src/infrastructure/view/components/organisms/Form/CooperatorForm/CooperatorForm.scss
+++ b/client/src/infrastructure/view/components/organisms/Form/CooperatorForm/CooperatorForm.scss
@@ -1,13 +1,24 @@
-.mission-form {
+
+.cooperator-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap:1rem;
-    width: 20rem;
-    button {
-        align-self: flex-end;
+    width: 35rem;
+    h2 {
+        align-self: center;
+        margin-bottom: 2rem;
     }
-    .input-label, input {
-        width:100%;
+    .cooperator-form-input-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+        width: 100%;
+        justify-content: center;
+        .input-label {
+            width: 45%;
+        }
+    }
+    button {
+        margin-top: 2rem;
+        align-self: flex-end;
     }
 }
