fix: button example

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -19,7 +19,7 @@
  @import "./templates/";
  @import "./pages/";
 
-@import "../components/";
+@import "../infrastructure/view/components/";
  
 // // Variations thru Events
 // @import "states/*";
