--- a/client/src/infrastructure/view/components/organisms/forms/cooperatorForm/CooperatorForm.scss
+++ b/client/src/infrastructure/view/components/organisms/forms/cooperatorForm/CooperatorForm.scss
@@ -15,6 +15,9 @@
         justify-content: center;
         .input-label {
             width: 45%;
+            input {
+                width: 100%;
+            }
         }
     }
     button {
