--- a/client/src/infrastructure/view/pages/addCooperatorPage/AddCooperatorPage.scss
+++ b/client/src/infrastructure/view/pages/addCooperatorPage/AddCooperatorPage.scss
@@ -1,11 +1,11 @@
-.add-mission-page {
-   .mission-form { 
+.add-cooperator-page {
+   .cooperator-form { 
   margin: auto;
   width: 50%;
   padding: 10px;
   margin-top: 5rem;
 }
-.back-button-mission {
+.back-button-cooperator {
   position: relative;
   width: 2.3rem;
   left: 2rem;
