refactor: scss architecture

--- a/client/src/infrastructure/view/components/molecules/molecules.scss
+++ b/client/src/infrastructure/view/components/molecules/molecules.scss
@@ -1,2 +1,6 @@
 @import "./LabelInput/LabelInput.scss";
 @import "./labelTextarea/LabelTextarea.scss";
+@import "./card/card.scss";
+@import "./cardDetails/cardDetails.scss";
+@import "./cardMenu/cardMenu.scss";
+@import "./searchBar/searchBar.scss";
