--- a/client/src/infrastructure/view/components/organisms/organisms.scss
+++ b/client/src/infrastructure/view/components/organisms/organisms.scss
@@ -1,2 +1,5 @@
 @import "./Forms/MissionForm/MissionForm.scss";
 @import "./Forms/CooperatorForm/CooperatorForm.scss";
+@import "./cardLists/cooperator/listingCooperatorCards.scss";
+@import "./cardLists/mission/listingMissionCards.scss";
+@import "./navbar/navBar.scss";
