--- a/client/src/infrastructure/view/components/atoms/atoms.scss
+++ b/client/src/infrastructure/view/components/atoms/atoms.scss
@@ -1,4 +1,9 @@
-@import './Button/Button.scss';
-@import "./Input/Input.scss";
-@import "./Label/Label.scss";
-@import "./Logo/Logo.scss";
+@import './button/Button.scss';
+@import "./input/Input.scss";
+@import "./label/Label.scss";
+@import "./logo/Logo.scss";
+@import "./contextMenuOption/contextMenuOption.scss";
+@import "./status/status.scss";
+@import "./tags/tags.scss";
+@import "./textarea/textarea.scss";
+@import "./title/title.scss";
