--- a/client/src/infrastructure/view/components/organisms/navbar/navBar.scss
+++ b/client/src/infrastructure/view/components/organisms/navbar/navBar.scss
@@ -29,6 +29,31 @@ nav {
     align-items: center;
     color: white;
   }
+  .MenuItem {
+    text-decoration: none;
+    color: #4a7aa9;
+    margin-top: 1.8rem;
+    transition: 0.2s all ease-in-out;
+    padding: 5%;
+    @media screen and(max-width: 1200px) {
+      font-size: 0.8rem;
+    }
+  
+    @media screen and(max-width: 920px) {
+      font-size: 0rem;
+    }
+  }
+  
+  .MenuItem:hover {
+    background-color: rgba(74, 122, 169, 0.3);
+    border: 1px solid rgb(128, 155, 181);
+    border-radius: 5px;
+    padding: 5%;
+    display: block;
+    color: white;
+    cursor: pointer;
+  }
+  
 
   .MenuFooter {
  text-decoration: none;
