--- a/client/src/infrastructure/view/components/molecules/searchBar/searchBar.scss
+++ b/client/src/infrastructure/view/components/molecules/searchBar/searchBar.scss
@@ -4,8 +4,8 @@
     gap: 10px;
     width: 33vw;
     position: absolute;
-    right: 8vw;
-    top: 3vh;
+    left: 70vw;
+    top: 5vh;
     &__bar {
       display: flex;
       align-items: center;
