--- a/client/src/infrastructure/view/components/templates/mainLayout/mainLayout.scss
+++ b/client/src/infrastructure/view/components/templates/mainLayout/mainLayout.scss
@@ -3,13 +3,13 @@
     width: 100vw;
     #content {
       width: 85vw;
+      padding-top: 5vh;
     }
     .Menu {
       width: 15vw;
       @media screen and(max-width: 920px) {
           width: 14vw;
         }
-     
     }
   }
   
