--- a/client/src/infrastructure/view/components/atoms/logo/Logo.scss
+++ b/client/src/infrastructure/view/components/atoms/logo/Logo.scss
@@ -1,5 +1,6 @@
 .Logo {
-    width: 80px;
-    height: 78px;
-    margin-top: 2rem;
+    width: 40%;
+    padding-top: 2rem;
+    display: flex;
+    margin: auto;
 }
