--- a/client/src/infrastructure/view/components/organisms/navbar/navBar.scss
+++ b/client/src/infrastructure/view/components/organisms/navbar/navBar.scss
@@ -1,130 +1,63 @@
-nav {
-  position: sticky;
-  top: 0;
-  height: 100vh;
-  background-color: #17243e;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  float: inline-end;
-  width: 15vw;
-
-  .Logo {
-    width: 80px;
-    height: 78px;
-    margin-top: 2rem;
-    @media screen and (max-width: 920px) {
-      width: 50px;
-      height: 48px;
-    }
-  }
-  .MenuList .MenuItem {
-    text-decoration: none;
-
-    outline: none;
-    height: 50px;
-    margin: 2%;
+.Menu {
+    position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+    height: 100vh;
+    background-color: $nightblue;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    color: white;
-  }
-  .MenuItem {
-    text-decoration: none;
-    color: #4a7aa9;
-    margin-top: 1.8rem;
-    transition: 0.2s all ease-in-out;
-    padding: 5%;
-    @media screen and(max-width: 1200px) {
-      font-size: 0.8rem;
+    float: inline-end;
+        .MenuList, .MenuFooter {
+            margin-top: 3rem;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .MenuItem {
+                width: 70%;
+                height: 50px;
+                list-style-type: none;
+                margin: 2%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: white;
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+                .menuIcon {
+                    width: 1rem;
+                    height: 1rem;
+                    margin-right: 5%;
+                }
+            }
+            :hover {
+                background-color:$white;
+                border: 1px solid $color-night-bleu;
+                border-radius: 5px;
+                padding: 5%;
+                display: block;
+                width: 80%;
+                color: $color-night-bleu;
+                cursor: pointer;
+                display: flex;
+              }
+              @media screen and(max-width: 900px) {
+             font-size: 0.8rem;
+              }
+              @media screen and(max-width: 780px) {
+                font-size: 0rem;
+                 }
+        }
+    #menuLinkActive {
+        background-color: white;
+        border-radius: 5px;
+        padding: 5%;
+        color: $nightblue;
     }
-  
-    @media screen and(max-width: 920px) {
-      font-size: 0rem;
+    .MenuFooter {
+        position: absolute;
+        bottom: 5vh;
     }
-  }
-  
-  .MenuItem:hover {
-    background-color: rgba(74, 122, 169, 0.3);
-    border: 1px solid rgb(128, 155, 181);
-    border-radius: 5px;
-    padding: 5%;
-    display: block;
-    color: white;
-    cursor: pointer;
-  }
-  
-
-  .MenuFooter {
- text-decoration: none;
-  color: #4a7aa9;
-  margin-top: 1.8rem;
-  transition: 0.2s all ease-in-out;
-  padding: 5%;
-    position: absolute;
-    bottom: 5vh;
-    gap: 1rem;
-    color: white;
-    span,  .menuIcon{
-        color: white;
-
-    }
-
-    @media screen and(max-width: 1200px) {
-      font-size: 0.8rem;
-    }
-
-    @media screen and(max-width: 920px) {
-      font-size: 0rem;
-    }
-  }
-  .menuIcon {
-    width: 1rem;
-    height: 1rem;
-    padding-right: 0.3rem;
-  }
 }
 
-// #menuLinkActive {
-//     background-color: white;
-//     border-radius: 5px;
-//     padding: 5%;
-//     color: #17243e;}
 
-.MenuItem {
-  text-decoration: none;
-  color: #4a7aa9;
-  margin-top: 1.8rem;
-  transition: 0.2s all ease-in-out;
-  padding: 5%;
-  @media screen and(max-width: 1200px) {
-    font-size: 0.8rem;
-  }
-
-  @media screen and(max-width: 920px) {
-    font-size: 0rem;
-  }
-}
-
-.MenuItem:hover {
-  background-color: rgba(74, 122, 169, 0.3);
-  border: 1px solid rgb(128, 155, 181);
-  border-radius: 5px;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  display: block;
-  color: white;
-  font-size: 0.8rem;
-  cursor: pointer;
-}
-
-.MenuFooter:hover {
-    background-color: rgba(74, 122, 169, 0.3);
-    border: 1px solid rgb(128, 155, 181);
-    border-radius: 5px;
-    padding: 1rem;
-    display: block;
-    color: white;
-    font-size: 0.8rem;
-    cursor: pointer;
-  }
