--- a/client/src/styles/vars/index.scss
+++ b/client/src/styles/vars/index.scss
@@ -16,7 +16,7 @@ $green-default-tags:#68BAB2;
 $black1: rgb(36, 36, 36);
 $black2: rgb(49, 49, 49);
 $black3: rgb(65, 15, 15);
-$white: rgb(207, 207, 207);
+$white:white;
 $color-bleu:#17243E;
 $background-color-search-card: #EEEEEE;
 
