fix: positioning and displaying checkbox

--- a/client/src/infrastructure/view/components/atoms/checkBox/checkBox.scss
+++ b/client/src/infrastructure/view/components/atoms/checkBox/checkBox.scss
@@ -1,9 +1,5 @@
 .checkbox__wrapper {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    top: 15vh;
-    left: 20vw;
+    padding-left: 5vw;
     label{
         display: flex;
         flex-direction: row;
