--- a/client/src/infrastructure/view/components/organisms/navbar/navBar.scss
+++ b/client/src/infrastructure/view/components/organisms/navbar/navBar.scss
@@ -1,62 +1,75 @@
-.Menu {
-    position: -webkit-sticky;
-	position: sticky;
-	top: 0;
+#App {
+    font-family: sans-serif;
     height: 100vh;
-    background-color: $nightblue;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    float: inline-end;
-        .MenuList, .MenuFooter {
-            margin-top: 3rem;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            .MenuItem {
-                width: 70%;
-                height: 50px;
-                list-style-type: none;
-                margin: 2%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                color: white;
-                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                .menuIcon {
-                    width: 1rem;
-                    height: 1rem;
-                    margin-right: 5%;
-                }
-            }
-            :hover {
-                background-color:$white;
-                border: 1px solid $color-night-bleu;
-                border-radius: 5px;
-                padding: 5%;
-                display: block;
-                color: $color-night-bleu;
-                cursor: pointer;
-                display: flex;
-              }
-              @media screen and(max-width: 900px) {
-             font-size: 0.8rem;
-              }
-              @media screen and(max-width: 780px) {
-                font-size: 0rem;
-                 }
-        }
-    #menuLinkActive {
-        background-color: white;
-        border-radius: 5px;
-        padding: 5%;
-        color: $nightblue;
-    }
-    .MenuFooter {
-        position: absolute;
-        bottom: 5vh;
-    }
-}
-
-
+  }
+  
+  #page-wrap {
+    text-align: center;
+    overflow: auto;
+    top: 45%;
+    position: relative;
+  }
+  
+  .bm-item {
+    display: inline-block;
+    /* Our sidebar item styling */
+    text-decoration: none;
+    margin-bottom: 10px;
+    color: #d1d1d1;
+    transition: color 0.2s;
+  }
+  
+  .menuIcon {
+    padding-right: 10px;
+  }
+  
+  .bm-item:hover {
+    color: white;
+  }
+  
+  .bm-burger-button {
+    position: fixed;
+    width: 36px;
+    height: 30px;
+    right: 36px;
+    top: 36px;
+  }
+  
+  /* Color/shape of burger icon bars */
+  .bm-burger-bars {
+    background: #373a47;
+  }
+  
+  /* Position and sizing of clickable cross button */
+  .bm-cross-button {
+    height: 24px;
+    width: 24px;
+  }
+  
+  /* Color/shape of close button cross */
+  .bm-cross {
+    background: #bdc3c7;
+  }
+  
+  /* General sidebar styles */
+  .bm-menu {
+    background: #000;
+    padding: 2.5em 1.5em 0;
+    font-size: 1.15em;
+  }
+  
+  /* Morph shape necessary with bubble or elastic */
+  .bm-morph-shape {
+    fill: #373a47;
+  }
+  
+  /* Wrapper for item list */
+  .bm-item-list {
+    color: #b8b7ad;
+  }
+  
+  /* Styling of overlay */
+  .bm-overlay {
+    background: rgba(0, 0, 0, 0.3);
+  }
+  
