--- a/client/src/infrastructure/view/components/organisms/navbar/navBar.scss
+++ b/client/src/infrastructure/view/components/organisms/navbar/navBar.scss
@@ -1,16 +1,4 @@
-#App {
-    font-family: sans-serif;
-    height: 100vh;
-  }
-  
-  #page-wrap {
-    text-align: center;
-    overflow: auto;
-    top: 45%;
-    position: relative;
-  }
-  
-  .bm-item {
+.bm-item {
     display: inline-block;
     /* Our sidebar item styling */
     text-decoration: none;
@@ -31,7 +19,7 @@
     position: fixed;
     width: 36px;
     height: 30px;
-    right: 36px;
+    left: 25px;
     top: 36px;
   }
   
