--- a/client/src/infrastructure/view/components/molecules/card/card.scss
+++ b/client/src/infrastructure/view/components/molecules/card/card.scss
@@ -2,7 +2,6 @@
   width: 15rem;
   height: 100%;
   border-radius: 10px;
- 
   &__content {
     &:hover{
       box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
@@ -49,5 +48,7 @@
   }
   &__illustration {
     width: inherit;
+    border-radius: 20px;
+
   }
 }
