feat: prefill & navbar

--- a/client/src/infrastructure/view/components/organisms/navbar/navBar.scss
+++ b/client/src/infrastructure/view/components/organisms/navbar/navBar.scss
@@ -20,12 +20,12 @@
     width: 36px;
     height: 30px;
     left: 25px;
-    top: 36px;
+    top: 15px;
   }
   
   /* Color/shape of burger icon bars */
   .bm-burger-bars {
-    background: #373a47;
+    background: #3DD2CC;
   }
   
   /* Position and sizing of clickable cross button */
