--- a/client/src/infrastructure/view/components/organisms/organisms.scss
+++ b/client/src/infrastructure/view/components/organisms/organisms.scss
@@ -1,3 +1,4 @@
 @import "./Forms/ReviewForm/ReviewForm.scss";
 @import "./cardLists/review/listingReviewCards.scss";
 @import "./navbar/navBar.scss";
+@import "./header/header.scss"
