--- a/client/src/infrastructure/view/pages/pages.scss
+++ b/client/src/infrastructure/view/pages/pages.scss
@@ -1,3 +1,4 @@
 @import './review/addReview/AddReviewPage.scss';
 @import './review/updateReview/UpdateReviewPage.scss';
+@import './login/login.scss'
 
