--- a/client/src/infrastructure/view/components/templates/mainLayout/mainLayout.scss
+++ b/client/src/infrastructure/view/components/templates/mainLayout/mainLayout.scss
@@ -5,6 +5,8 @@
         display: flex;
         flex-direction: column;
         margin-top: 8vh;
+        height: 92vh;
+        background-color : hsl(228deg, 33%, 97%)
     }
   }
   
